move scanned transaction and remove sql